// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> component renders 3 buttons page number 1`] = `
<DocumentFragment>
  <nav>
    <ul
      class="pagination"
    >
      <li
        class="page-item active"
        id="page-number"
      >
        <span
          class="page-link"
          style="cursor: pointer;"
        >
          1
        </span>
      </li>
      <li
        class="page-item "
        id="page-number"
      >
        <span
          class="page-link"
          style="cursor: pointer;"
        >
          2
        </span>
      </li>
      <li
        class="page-item "
        id="page-number"
      >
        <span
          class="page-link"
          style="cursor: pointer;"
        >
          3
        </span>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`<Pagination /> component renders 5 buttons page number & active class on page 1 1`] = `
<DocumentFragment>
  <nav>
    <ul
      class="pagination"
    >
      <li
        class="page-item "
        id="page-number"
      >
        <span
          class="page-link"
          style="cursor: pointer;"
        >
          1
        </span>
      </li>
      <li
        class="page-item "
        id="page-number"
      >
        <span
          class="page-link"
          style="cursor: pointer;"
        >
          2
        </span>
      </li>
      <li
        class="page-item active"
        id="page-number"
      >
        <span
          class="page-link"
          style="cursor: pointer;"
        >
          3
        </span>
      </li>
      <li
        class="page-item "
        id="page-number"
      >
        <span
          class="page-link"
          style="cursor: pointer;"
        >
          4
        </span>
      </li>
      <li
        class="page-item "
        id="page-number"
      >
        <span
          class="page-link"
          style="cursor: pointer;"
        >
          5
        </span>
      </li>
      <li
        class="page-item "
        id="button-helper"
      >
        <span
          class="page-link"
          style="cursor: pointer;"
        >
          ›
        </span>
      </li>
      <li
        class="page-item "
        id="button-helper"
      >
        <span
          class="page-link"
          style="cursor: pointer;"
        >
          »
        </span>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
